service-mesh-2/3-circuit-break/03-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: vs-circuit-breaker
  labels:
    app: httpbin
  namespace: circuit-breaker
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
